--- a/src/components/lf-style.css
+++ b/src/components/lf-style.css
@@ -1,9 +1,8 @@
 * {
   margin: 0;
 }
-
-.body {
-  background-color: rgb(50, 50, 50);
+body{
+  background-color: white;
 }
 
 .strip {
@@ -59,6 +58,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  
 }
 .logo {
   height: 7vh;
